app/0-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    istio-injection: enabled
