app/3-services.yml
apiVersion: v1
kind: Service
metadata:
  name: graphql
  namespace: app
  labels:
    app: graphql
spec:
  selector:
    app: graphql
  ports:
    - name: http-app
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sales
  namespace: app
  labels:
    app: sales
spec:
  selector:
    app: sales
  ports:
    - name: http-app
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: app
  labels:
    app: payment
spec:
  selector:
    app: payment
  ports:
    - name: http-app
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: app
  labels:
    app: customer
spec:
  selector:
    app: customer
  ports:
    - name: http-app
      protocol: TCP
      port: 3000
      targetPort: 3000
